# SendX

./: .dockerignore  .env.example  .replit  AGENTS.md  AI_SECURITY.md  API_CATALOG.md  ARCHITECTURE.md  BENCHMARKS.md  CODEMAP.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT.md  Dockerfile  LICENSE  PROJECT_BRIEF.md  README.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  TEST_MATRIX.md  ai_security.py  create_release_assets.py  create_release_zips.py  demo_security.py  docker-compose.yml  main.py  pyproject.toml  replit.md  requirements.txt  sendx_security_infographic.html  sendx_security_report.md  storage.py
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  infra.instructions.md
.github/prompts/: repo-context.md
.github/workflows/: ci-cd.yml
attached_assets/: Pasted-3-Key-flows-states-A-Create-Share-User-types-secret-chooses-TTL-10-min-default-Encrypt-i-1755673371891_1755673371891.txt  Pasted-What-to-add-and-why-Zero-knowledge-client-side-encryption-with-URL-fragment-key-Encrypt-in-the--1755672977159_1755672977159.txt
docs/: API_Reference.md  Installation_Guide.md  SecretKeeper_Documentation.md  Security_Assessment.md
static/: ai_security.js  crypto.js  main.js  style.css
templates/: index.html  view.html
