[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "slowapi>=0.1.9",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]
